--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @layer base {
+@layer base {
   body {
-    @apply bg-[#C00B27];
+    @import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto&display=swap");
+    @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+    font-family: "Roboto", sans-serif;
   }
-} */
+}
