--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,5 +7,6 @@
     @import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto&display=swap");
     @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
     font-family: "Roboto", sans-serif;
+    @apply bg-[#F8EDE3];
   }
 }
